@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-02-05 DP  1.6.3  Fix the graphical explain to properly display backwards
+                      index scan nodes, per Brendan O'Shea.
 2007-02-05 DP  1.6.3  Fix default perspective names, per Ezequias
 2007-02-05 DP  1.6.3  Monitor the streams again whilst backing up on Mac -
                       this no longer crashesin wx2.8. Per Dave Livesay.
